--- a/.gitignore
+++ b/.gitignore
@@ -17,4 +17,4 @@ data/prep_biotime/BioTIMEQuery_24_06_2021.csv
 *.html
 
 #full Q1 model output 
-output/Aug2023/mod_q1.terrestrial_withinstudies.Rdata
+outputs/Aug2023/mod_q1.terrestrial_withinstudies.Rdata
