--- a/.gitignore
+++ b/.gitignore
@@ -16,5 +16,6 @@ data/prep_biotime/BioTIMEQuery_24_06_2021.csv
 #don't push Rmd htmls
 *.html
 
-#full Q1 model output 
+#full Q1 model outputs 
 outputs/Aug2023/mod_q1.terrestrial_withinstudies.Rdata
+outputs/Aug2023/mod_q1.terrestrial_withinstudiesv2.Rdata
